--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>joda-time</artifactId>
             <version>2.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.plantuml</groupId>
+            <artifactId>plantuml</artifactId>
+            <version>8038</version>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
