Finished the scenario definition for rye.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -11,12 +11,15 @@ SimulationName = Default scenario (rye)
 # of 500 * 500 = 250000
 SizeOfField = 250000
 
+# Number of workers
+# 1 means there is one worker
+NumberOfWorkers = 1
+
 ####################################
 #                                  #
 # Simulation-wide parameters (end) #
 #                                  #
 ####################################
-
 
 ################################################################
 #                                                              #
@@ -41,4 +44,35 @@ Process1Start = 30.08
 #                                                            #
 ##############################################################
 
+###########################################
+#                                         #
+# Process 2 (ripening) parameters (start) #
+#                                         #
+###########################################
 
+# Yield (how much final product the field generates on one square meter of field)
+# in kilograms per square meter
+# 0.66725, for example, means that our field generates 0.66725 of final product
+# (rye, wheat) per 1 square meter
+Process2YieldPerSquareMeter = 0.66725
+
+#########################################
+#                                       #
+# Process 2 (ripening) parameters (end) #
+#                                       #
+#########################################
+
+######################################################
+#                                                    #
+# Process 3 (collecting the crop) parameters (start) #
+#                                                    #
+######################################################
+
+# Effort per square meter in minutes
+Process3EffortPerSquareMeter = 27
+
+####################################################
+#                                                  #
+# Process 3 (collecting the crop) parameters (end) #
+#                                                  #
+####################################################
