Corrected yield for rye, started to define parameters for wheat.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -54,7 +54,11 @@ Process1Start = 30.08
 # in kilograms per square meter
 # 0.66725, for example, means that our field generates 0.66725 of final product
 # (rye, wheat) per 1 square meter
-Process2YieldPerSquareMeter = 0.66725
+#
+# 40 bushels per acre = 40 * 36.368 kilograms per acre = 1454.72 kg per acre
+# 1 acre = 4046,86 square meters
+# 1454.72 kg per acre / 4046.86 square meters per acre = 0.3595
+Process2YieldPerSquareMeter = 0.3595
 
 # Day, on which the process 2 ends in format DD.MM, i. e. the day in year, when
 # the seeds have been fully converted to crop and are ready for collecting
