--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -28,7 +28,7 @@ NumberOfWorkers = 1
 ################################################################
 
 # Quantity of seeds per square meter in kilograms
-Process1QuantityOfSeeds = 0.0629
+Process1QuantityOfSeeds = 0.0449
 
 # Effort per square meter in hours
 Process1EffortInSquareMeters = 0.44
@@ -55,6 +55,12 @@ Process1Start = 30.08
 # 0.66725, for example, means that our field generates 0.66725 of final product
 # (rye, wheat) per 1 square meter
 Process2YieldPerSquareMeter = 0.66725
+
+# Day, on which the process 2 ends in format DD.MM, i. e. the day in year, when
+# the seeds have been fully converted to crop and are ready for collecting
+# E. g. 05.07 means that on July 5th of every year, process 2 is finished and
+# process 3 can start.
+Process2End = 05.07
 
 #########################################
 #                                       #
