Working on cc.altruix.econsimtr01.ch03.EnoughCapacityForPuttingSeedsIntoGround.validate.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -43,6 +43,9 @@ Process1EffortInSquareMeters = 0.44
 # on August, 30th of every year
 Process1Start = 30.08
 
+# Last day, on which putting seeds into ground is possible
+Process1End = ?
+
 ##############################################################
 #                                                            #
 # Process 1 (putting seeds into the ground) parameters (end) #
