cc.altruix.econsimtr01.ch03.EnoughCapacityForPuttingSeedsIntoGround.validate is now ready for testing.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -43,8 +43,9 @@ Process1EffortInSquareMeters = 0.44
 # on August, 30th of every year
 Process1Start = 30.08
 
-# Last day, on which putting seeds into ground is possible
-Process1End = ?
+# Last day, on which putting seeds into ground is possible, foramt DD.MM
+# 30.10 means October 30th
+Process1End = 30.10
 
 ##############################################################
 #                                                            #
