--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -38,6 +38,11 @@ Process1EffortInSquareMeters = 0.44
 # on August, 30th of every year
 Process1Start = 30.08
 
+# Last day, on which putting seeds into ground is possible, foramt DD.MM
+# 30.10 means October 30th
+Process1End = 30.10
+
+
 ##############################################################
 #                                                            #
 # Process 1 (putting seeds into the ground) parameters (end) #
