--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -15,6 +15,11 @@ SizeOfField = 250000
 # 1 means there is one worker
 NumberOfWorkers = 1
 
+# How many hours do workers work on a business day?
+# Unit: Hours
+# 8 means they work 8 hours per business day
+LaborPerBusinessDay = 8
+
 ####################################
 #                                  #
 # Simulation-wide parameters (end) #
