Working on tests for EnoughCapacityForHarvesting.kt.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -88,8 +88,9 @@ Process2End = 05.07
 #                                                    #
 ######################################################
 
-# Effort per square meter in minutes
-Process3EffortPerSquareMeter = 27
+# Effort per square meter in hours
+# 0.45 means 27 minutes
+Process3EffortPerSquareMeter = 0.45
 
 ####################################################
 #                                                  #
