Implemented cc.altruix.econsimtr01.ch03.EnoughCapacityForHarvesting.calculateAvailableTime.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -95,6 +95,9 @@ Process2End = 05.07
 # 0.45 means 27 minutes
 Process3EffortPerSquareMeter = 0.45
 
+# End of harvesting period, DD.MM
+# 10.08 means August, 10th
+Process3End = 10.08
 
 ####################################################
 #                                                  #
