--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -92,6 +92,10 @@ Process2End = 05.07
 # 0.45 means 27 minutes
 Process3EffortPerSquareMeter = 0.45
 
+# End of harvesting period, DD.MM
+# 10.08 means August, 10th
+Process3End = 10.08
+
 ####################################################
 #                                                  #
 # Process 3 (collecting the crop) parameters (end) #
