Implemented cc.altruix.econsimtr01.ch03.EnoughSeedsAtTheStartValidator.validate.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationRye.properties
@@ -24,6 +24,11 @@ NumberOfWorkers = 1
 # 8 means they work 8 hours per business day
 LaborPerBusinessDay = 8
 
+# How many seeds do we have at the start of the simulation?
+# Unit: Kilograms
+# 10 means 10 kg
+InitialSeedQuantity = 10
+
 ####################################
 #                                  #
 # Simulation-wide parameters (end) #
