Fixed a failing test.

--- a/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
+++ b/src/test/resources/ch03/BasicAgriculturalSimulationWheat.properties
@@ -24,6 +24,12 @@ NumberOfWorkers = 1
 # 8 means they work 8 hours per business day
 LaborPerBusinessDay = 8
 
+# How many seeds do we have at the start of the simulation?
+# Unit: Kilograms
+# 10 means 10 kg
+InitialSeedQuantity = 11225.0
+
+
 ####################################
 #                                  #
 # Simulation-wide parameters (end) #
