--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
     <groupId>cc.altruix</groupId>
     <artifactId>econsim-tr01</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1</version>
 
     <properties>
         <kotlin.version>1.0.1-2</kotlin.version>
