Added MillThroughput parameter.

--- a/src/test/resources/flourprod/flourprod.properties
+++ b/src/test/resources/flourprod/flourprod.properties
@@ -35,3 +35,9 @@
 # *) 0.90 - 1 kilogram of grain is converted into 0.90 kilograms of flour
 # *) 0.75 - 1 kilogram of grain is converted into 750 grams of flour
 FlourConversionFactor = 0.90
+
+# Mill throughput in kilograms per hour
+# 105.7173 means that a mill can convert 105.7173 kilograms of grain (rye,
+# wheat) to flour per hour, i. e. every hour the mill converts 105.7173 kg of
+# grain into 105.7173*FlourConversionFactor kg of flour.
+MillThroughput = 105.7173
