Implemented cc.altruix.econsimtr01.flourprod.FlourProduction.run.

--- a/src/test/resources/flourprod/flourprodRye.properties
+++ b/src/test/resources/flourprod/flourprodRye.properties
@@ -150,3 +150,7 @@ FlourConversionFactor = 0.90
 # wheat) to flour per hour, i. e. every hour the mill converts 105.7173 kg of
 # grain into 105.7173*FlourConversionFactor kg of flour.
 MillThroughput = 105.7173
+
+# Max. number of hours a mill can work on a day in hours
+# 8 means that the mill can work max. 8 hours per day
+MillMaxWorkingTimePerDay = 8.0
