Added starter creation parameters.

--- a/src/test/resources/breadprod/breadprodRye.properties
+++ b/src/test/resources/breadprod/breadprodRye.properties
@@ -161,7 +161,23 @@ MillMaxWorkingTimePerDay = 8.0
 #                                       #
 #########################################
 
+# Minimal starter reserve [kg]
+# If the quantity of starter in the shack is lower than this number, the baker
+# starts another cycle of starter production.
+# TODO: Add validators for MinimalStarterReserve
+MinimalStarterReserve = 0.25
+
+# Starter daily feeding quantity [kg]
+# When we produce the starter, we add flour and water to it every day during the
+# first 2 weeks. This parameter specifies, how much flour we add every day.
+# 0.006 means that during that period we add 6 grams of flour every day.
+# TODO: Add validators for StarterDailyFeedingQuantity
+StarterDailyFeedingQuantity = 0.0006
+
+
 # TBD: 2 parameters for producing natural starter
+
+
 
 #######################################
 #                                     #
